[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/yellowbird-downflap.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/yellowbird-midflap.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/yellowbird-upflap.png" type="Texture" id=3]
[ext_resource path="res://entities/Player.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/wing.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "flap",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.8476
height = 10.7802

[node name="Player" type="KinematicBody2D"]
position = Vector2( 187.456, 247.762 )
collision_mask = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="FlapSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
